Python Update and IoT

--- a/contentPage/introductionofpython.html
+++ b/contentPage/introductionofpython.html
@@ -1791,20 +1791,8 @@ print(a)
                      <p>HELLO</p> 
                   </div>
                   <br>
+              
                   <div class="w3-container  w3-sand w3-round-xlarge">
-                    <p> <b> &#10028; Example of   <span style="color: rgb(115, 2, 7);"> \ooo </span>  </b></p>
-                    <p><b>Note : </b> ASCII of H=72, E=69, L=76, O=79 then in octal value is: 72=110, 69=105, 76=114, 79=117</p>
-                    <pre>
-                      <code class="language-java">
-a="\110\105\114\114\117"
-print(a)
-                      </code>
-                      </pre> 
-                    <p> <b>Output:</b></p>
-                     <p>HELLO</p> 
-                  </div>
-                  <br>
-                  <div class="w3-container  w3-pale-yellow w3-round-xlarge">
                     <p> <b> &#10028; Example of   <span style="color: rgb(115, 2, 7);">\xhh </span>  </b></p>
                     <p><b>Note : </b> ASCII of H=72, E=69, L=76, O=79 then in Hexa value is: 72=48, 69=45, 76=4C, 79=4F</p>
                     <pre>
@@ -1817,6 +1805,36 @@ print(a)
                      <p>HELLO</p> 
                   </div>
                  <br>
+
+             
+  <div class="w3-container  w3-sand w3-round-xlarge">
+
+    <p> <b>Labwork</b></p>
+    <p>Q41) WAP in python to print the following output.</p>
+      <ul class="w3-ul">
+       <li> 1). My name is {}, I am {} years old. </li>
+       <li> 2). I want {} burgers and {} coffees at rupees {}.
+    </li> 
+    <li>3). I am {}, my father name is {} and my mother name is {}     <br> <span style="color: rgb(115, 2, 7);"> [Hint:  name="Yourname", fname="Your Father Name", mname="Your Mother Name"] </span> 
+    </li>
+    <li> 4). 
+    "Do the best you can until you know better." <br>
+       &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;        -Maya Angleou
+    </li>
+    <li> 5). "This" "is" "Python" "it" "is" "relesed" "in" 1991 "by" "Guido van Rossum"  [ Using + Operator]</li>
+    </ul>
+<pre>
+<code class="language-java">
+#Output    
+ThisisPythonitisrelesedin1991byGuido van Rossum
+
+</code>
+</pre> 
+
+</div>
+
+<br>
+
                </div>
 
             </div> 
