--- a/python.html
+++ b/python.html
@@ -120,7 +120,7 @@
           <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
               <i class="bi bi-book" style="color: #47aeff;"></i>
-              <h3><a href="contentPage/pythoncontent.html">Ch-4: Operators, Expressions and Python Statements
+              <h3><a href="contentPage/operatorsexpresspystatements.html">Ch-4: Operators, Expressions and Python Statements
 
                 </a></h3>
             </div>
@@ -131,28 +131,28 @@
           <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="450">
               <i class="bi bi-book" style="color: #b2904f;"></i>
-              <h3><a href="contentPage/pythoncontent.html">Ch-5: Sequence Data Types </a></h3>
+              <h3><a href="contentPage/sequencedatatypes.html">Ch-5: Sequence Data Types </a></h3>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="500">
               <i class="bi bi-book" style="color: #b20969;"></i>
-              <h3><a href="contentPage/pythoncontent.html">Ch-6: Functions </a></h3>
+              <h3><a href="contentPage/pyfunctions.html">Ch-6: Functions </a></h3>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="550">
               <i class="bi bi-book" style="color: #ff5828;"></i>
-              <h3><a href="contentPage/pythoncontent.html">Ch-7: File Processing </a></h3>
+              <h3><a href="contentPage/fileprocessing.html">Ch-7: File Processing </a></h3>
             </div>
           </div>
           
           <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="600">
               <i class="bi bi-book" style="color: #29cc61;"></i>
-              <h3><a href="contentPage/pythoncontent.html">Ch-8: Scope and Modules
+              <h3><a href="contentPage/scopeandmodule.html">Ch-8: Scope and Modules
               </a></h3>
             </div>
           </div> 
@@ -160,7 +160,7 @@
           <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="600">
               <i class="bi bi-book" style="color:  #5578ff"></i>
-              <h3><a href="contentPage/pythoncontent.html">Ch-9: NumPy Basics</a></h3>
+              <h3><a href="contentPage/numpybasic.html">Ch-9: NumPy Basics</a></h3>
             </div>
           </div>
 
