--- a/contentPage/operatorsexpresspystatements.html
+++ b/contentPage/operatorsexpresspystatements.html
@@ -1419,9 +1419,21 @@ for i in range(0, 10, 2):
                         <li>Q71). WAP to calculate the sum of all the odd numbers within the given range. </li>
                         <li>Q72). WAP to print a multiplication table of a given number.<span style="color: rgb(115, 2, 7);"> [Hint: 5 x 1 = 5]</span>  </li>
                         <li>Q73). WAP to count the total number of digits in a number. <span style="color: rgb(115, 2, 7);"> [Hint : given number = 23646842, digits is=8 ]</span> </li>
-                 
-
-                     </ul>
+                        <li>Q74). WAP to program that accepts any digits number from the user and  <span style="color: rgb(115, 2, 7);">reverses</span>  it.
+                        </li>
+                        <li>Q75). WAP to check if a given number is an  <span style="color: rgb(115, 2, 7);">Armstrong number</span>  or not [ <span style="color: rgb(115, 2, 7);">Hint: 371 => 27 + 343 + 1 =  371 </span>] .
+                        </li>
+                        <li> Q76). WAP to find the sum of the digits of a number. [ <span style="color: rgb(115, 2, 7);">Hint: 2563 => 2 + 5 + 6 + 3 =  16 </span>]</li>
+                        <li> Q77). WAP to find the factorial of a number. [ <span style="color: rgb(115, 2, 7);">Hint: 5 => 1 x 2 x 3 x 4 x 5 =  120 </span>]</li>
+                        <li> Q78). WAP to check whether a number is <span style="color: rgb(115, 2, 7);">prime or not</span> .</li>
+                        <li> Q79). WAP to check if the given string is a <span style="color: rgb(115, 2, 7);">palindrome.</span>  [Hint : Book = kooB is not Palindrome  ]</li>
+                        <li> Q80). WAP to print the series of number of <span style="color: rgb(115, 2, 7);"> non-prime number</span> upto N number. </li> 
+                        <li> Q81). WAP to print the <span style="color: rgb(115, 2, 7);"> Fibonacci series </span> upto N number. [Hint : 0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, ... ]</li>
+                        <li> Q82). WAP count the number of vowels in a string using a for loop.</li>
+                        <li> Q83). WAP to display the sum of odd number and even number that fall between 12 and 37(including both numbers).</li>
+                        <li> Q84). WAP to display all the numbers which are divisible by 11 but not by 2 between 100 and 500.
+                        </li>
+                    </ul>
                      
                 </div>
                 <br>
