--- a/iot.html
+++ b/iot.html
@@ -104,14 +104,14 @@
           <div class="col-lg-3 col-md-4 mt-4  shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-book" style="color: #e80368;"></i>
-              <h3><a href="contentPage/pythoncontent.html">Ch-2: Things and Connections 
+              <h3><a href="contentPage/thingsandConnections.html">Ch-2: Things and Connections 
               </a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4  shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
               <i class="bi bi-book" style="color: #e361ff;"></i>
-              <h3><a href="contentPage/pythoncontent.html">Ch-3: Sensors, Actuators and Microcontrollers  
+              <h3><a href="contentPage/microcontrollers.html">Ch-3: Sensors, Actuators and Microcontrollers  
                 
                 </a></h3>
             </div>
@@ -119,7 +119,7 @@
           <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
               <i class="bi bi-book" style="color: #47aeff;"></i>
-              <h3><a href="contentPage/pythoncontent.html">Ch-4: Building IoT applications 
+              <h3><a href="contentPage/buildingIoTapplications.html">Ch-4: Building IoT applications 
 
                 </a></h3>
             </div>
@@ -130,13 +130,13 @@
           <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="450">
               <i class="bi bi-book" style="color: #b2904f;"></i>
-              <h3><a href="contentPage/pythoncontent.html">Ch-5: Security and Future of IoT Ecosystem </a></h3>
+              <h3><a href="contentPage/FutureofIoT.html">Ch-5: Security and Future of IoT Ecosystem </a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="500">
               <i class="bi bi-book" style="color: #b20969;"></i>
-              <h3><a href="contentPage/pythoncontent.html">Ch-6: Soft skills-Personality Development </a></h3>
+              <h3><a href="contentPage/personalityDevelopment.html">Ch-6: Soft skills-Personality Development </a></h3>
             </div>
           </div>
 
