--- a/quizcontainerpage.html
+++ b/quizcontainerpage.html
@@ -177,7 +177,7 @@
                   <h4>Python</h4>
                   <p>Quiz Set 1</p>
                   <div class="portfolio-links">
-                    <a href="pythonset1.html" title="Go for quiz"><i class="bi bi-arrow-right"></i></a>
+                    <a href="contentPage/pythonset1.html" title="Go for quiz"><i class="bi bi-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
