--- a/quizcontainerpage.html
+++ b/quizcontainerpage.html
@@ -191,7 +191,7 @@
                   <h4>IoT</h4>
                   <p>Quiz Set 1</p>
                   <div class="portfolio-links">
-                    <a href="iotset1.html" title="Go for quiz"><i class="bi bi-arrow-right"></i></a>
+                    <a href="contentPage/iotset1.html" title="Go for quiz"><i class="bi bi-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
