--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
           <h2> 404</h2>
           <h4> Opps! Page not found</h4>
           <p> The page you were looking for doesn't exist. You may have mistype the address or the page may have moved.</p>
-          <a href="index.html"> Back to Home</a>
+          <a href="https://www.bnultrasoft.com/"> Back to Home</a>
       </div>
      </div> 
    
