--- a/quizcontainerpage.html
+++ b/quizcontainerpage.html
@@ -244,7 +244,7 @@
                   <h4>Python</h4>
                   <p>Quiz Set 2</p>
                   <div class="portfolio-links">
-                    <a href="pythonset2.html" title="Go for quiz"><i class="bi bi-arrow-right"></i></a>
+                    <a href="contentPage/pythonset2.html" title="Go for quiz"><i class="bi bi-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
