--- a/contentPage/pyfunctions.html
+++ b/contentPage/pyfunctions.html
@@ -337,7 +337,7 @@ print(x)</code>
                     </div>
                     <br>
                     <div class="w3-container  w3-sand w3-round-xlarge">
-                        <p>  &#10028; The <span style="color: rgb(115, 2, 7);">lower()</span>  method returns a string where all characters are lower case</p>
+                        <p>  &#10028; The <span style="color: rgb(115, 2, 7);">lower()</span>  method returns in lower case  a string where all characters are lower case</p>
                         <p> &#10028; <b>Note:-</b> Symbols and Numbers are ignored. </p>
                         <p> <b>Example : </b>Lower case the string</p>
                        
@@ -353,7 +353,7 @@ print(x)
                     </div>
                     <br>
                     <div class="w3-container  w3-pale-yellow w3-round-xlarge">
-                        <p> &#10028; The  <span style="color: rgb(115, 2, 7);">upper()</span> method returns a string where all characters are in upper case.</p>
+                        <p> &#10028; The  <span style="color: rgb(115, 2, 7);">upper()</span> method returns in upper case a string where all characters are in upper case.</p>
                        <p> &#10028; <b> Note :- </b> Symbols and Numbers are ignored.
 
                        </p>
