--- a/softwaresdownload.html
+++ b/softwaresdownload.html
@@ -100,18 +100,18 @@
           <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
                 <i class="bi bi-box2-heart" style="color: #1800f4;"></i>
-              <h3><a href="assets/softwares/chrome.exe" download>Download Chrome Browser</a></h3>
+              <h3><a href="https://www.google.com/chrome/?brand=JJTC&gad_source=1&gclid=EAIaIQobChMIo4H0mu7phQMVNhODAx2ADwciEAAYASAAEgKPBfD_BwE&gclsrc=aw.ds" download>Download Chrome Browser</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="150">
                 <i class="bi bi-box2-heart" style="color: #f40000;"></i>
-                <h3><a href="assets/softwares/firefox.exe" download>Download Firefox Browser</a></h3>
+                <h3><a href="https://www.mozilla.org/en-US/firefox/new/" download>Download Firefox Browser</a></h3>
             </div>
           </div>    <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
                 <i class="bi bi-box2-heart" style="color: #00f445;"></i>
-                <h3><a href="assets/softwares/sublimetext4.exe" download>Download Sublime Text Editor</a></h3>
+                <h3><a href="https://www.sublimetext.com/" download>Download Sublime Text Editor</a></h3>
             </div>
           </div>    <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
@@ -131,17 +131,18 @@
             </div>
 
 
-          <!-- </div>    <div class="col-lg-3 col-md-4 mt-4 shadow">
+           </div>    <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="400">
-                <i class="bi bi-box2-heart" style="color: #c82703;"></i>
-              <h3><a href="assets/softwares/chrome.exe" download>Download Chrome Browser</a></h3>
+                <i class="bi bi-box2-heart" style="color: #0324c8;"></i>
+              <h3><a href="assets/softwares/devcpp.exe" download>Dev C++ (for C Language)</a></h3>
             </div>
+
           </div>    <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="450">
                 <i class="bi bi-box2-heart" style="color: #06f816fa;"></i>
-              <h3><a href="assets/softwares/chrome.exe" download>Download Chrome Browser</a></h3>
+              <h3><a href="assets/softwares/msys64.zip" download>Compiler for VS code</a></h3>
             </div>
-          </div> -->
+          </div> 
           
 
 
