Python and IoT Update

--- a/iot.html
+++ b/iot.html
@@ -142,12 +142,12 @@
 
   
 
-          <!-- <div class="col-lg-3 col-md-4 mt-4 shadow">
+          <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="600">
               <i class="bi bi-book" style="color:  #5578ff"></i>
-              <h3><a href="webdesigninglabwork.html">M2 R5: Lab Works</a></h3>
+              <h3><a href="https://www.tinkercad.com/login">Join Tinkercad </a></h3>
             </div>
-          </div>  -->
+          </div> 
 
 
         </div>
