--- a/iot.html
+++ b/iot.html
@@ -152,7 +152,7 @@
           <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="600">
               <i class="bi bi-book" style="color:  #5578ff"></i>
-              <h3><a href="https://www.bnultrasoft.com/contentPage/buildingIoTapplications.html#InterfacingwithArduinoIDE">Ch-4: Interfacing with Arduino IDE </a></h3>
+              <h3><a href="contentPage/buildingIoTapplications.html#InterfacingwithArduinoIDE">Ch-4: Interfacing with Arduino IDE </a></h3>
             </div>
           </div> 
 
