--- a/contentPage/fileprocessing.html
+++ b/contentPage/fileprocessing.html
@@ -514,7 +514,7 @@ print(f.read())</code>
                     <div class="w3-container  w3-sand w3-round-xlarge">
 
                         <p> <b>Example :</b> Open the file with "a" for appending, then add a list of texts to append to the file: </p>
-                        <p> <b>&#10028; Note:</b> If not in list then you will get error:  <span style="color: rgb(115, 2, 7);"><b> TypeError: </b></span> </p>
+                        <p> <b>&#10028; Note:</b> If not in proper list then you will get error:  <span style="color: rgb(115, 2, 7);"><b> TypeError: </b></span> </p>
                        
                     <pre>
                     <code class="language-java">
