IoT questions updated

--- a/contentPage/buildingIoTapplications.html
+++ b/contentPage/buildingIoTapplications.html
@@ -75,6 +75,7 @@
             <a class="w3-bar-item w3-button  w3-hover-white  w3-animate-zoom w3-animate-fading" href="#ClanguageKeywords">C language Keywords</a> 
             <a class="w3-bar-item w3-button  w3-hover-white  w3-animate-zoom w3-animate-fading" href="#InterfacingwithArduinoIDE">Interfacing with Arduino IDE</a> 
             <a class="w3-bar-item w3-button  w3-hover-white  w3-animate-zoom w3-animate-fading" href="#BlinkingLED">Blinking LED</a> 
+            <a class="w3-bar-item w3-button  w3-hover-white  w3-animate-zoom w3-animate-fading" href="#LEDwithButton">LED with Button</a> 
 
            
             <!-- <a class="w3-bar-item w3-button  w3-hover-white  w3-animate-zoom w3-animate-fading" href="#IoTLevel1">IoT Level 1</a>   
@@ -2430,6 +2431,8 @@ e) on (200ms), on (200ms), Off (100ms), off (100ms)
     <p> <b> Q9) </b> WAP to glow 1 LED bulb when push button pressed.</p>
     <p> <b> Q10) </b> WAP to glow 2 LED bulbs when push button pressed. (Hint: one led by one button and next led buld by next button)</p>
     <p> <b> Q11) </b> WAP to glow 3 LED bulbs with three buttons ( Working as a Traffic Lights).</p>
+   <p> <b> Q12) </b>WAP to print your name on Serial Monitor when button pressed (button pin number on 10)</p>
+   <p> <b> Q13) </b>WAP to blink Led on 10, 11, 12, 13, with delay 1.5 seconds when button pressed (button pin number on 5) </p>
 </div>
 
 
