Update IOT and python

--- a/contentPage/buildingIoTapplications.html
+++ b/contentPage/buildingIoTapplications.html
@@ -2433,9 +2433,29 @@ e) on (200ms), on (200ms), Off (100ms), off (100ms)
     <p> <b> Q11) </b> WAP to glow 3 LED bulbs with three buttons ( Working as a Traffic Lights).</p>
    <p> <b> Q12) </b>WAP to print your name on Serial Monitor when button pressed (button pin number on 10)</p>
    <p> <b> Q13) </b>WAP to blink Led on 10, 11, 12, 13, with delay 1.5 seconds when button pressed (button pin number on 5) </p>
+   <p> <b> Q14) </b> WAP to glow/OFF led with push button, the led <span style="color: rgb(115, 2, 7);"></span> Glow only push button A and led Off only push button B.</p>
+
+   <p> <b> Q15) </b> WAP to blink led 10, 11, 12, 13 and reverse blink ( led 13, 12, 11, 10) with one button.</p>
+
+  
 </div>
 
+<br>
+<div class="w3-container  w3-sand w3-round-xlarge">
 
+    <p> <b>Internal Working of button:</b></p>
+   <br>
+   
+   <video width="100%" controls>
+    <source src="push_button.mp4" type="video/mp4">
+   </video>
+   <br>
+   <p> <b>Labwork :</b></p>
+
+   <p> <b> Q16) </b>WAP to Glow/Off led by one button.</p>
+   <p> <b> Q17) </b>WAP to Glow/Off two led by one button.</p>
+
+</div>
 
 
 
