--- a/contentPage/buildingIoTapplications.html
+++ b/contentPage/buildingIoTapplications.html
@@ -2081,14 +2081,23 @@ int main()
    
     <p> <b> Q36)</b>  WAP to make as a calculator such as add(), Mul(), Sub() by using return value in function. To perform calculation by two interger which is enter by user.
     </p>
-    <p> <b>Q37) </b>  WAP in C to check if a given number is even or odd using the function and return also, the number should be enter by number.
+    <p> <b>Q37) </b>  WAP in C to check if a given number is even or odd using the function and return also, the number should be enter by user.
     </p>
     <p> <b> Q38) </b> WAP in C to find the greatest number among two by using function and return also, the number should be enter by user.
     </p>
    <p> <b> Q39) </b>  WAP in C to print the series of number upto Nth, the N number is enter by user, by using Function.
    </p> 
-    
-   
+   <p> <b> Q40) </b>WAP in C to find cube of a number using function, the number should be enter by user. </p> 
+   <p> <b> Q41) </b>WAP in C to find prime numbers in given range using functions, the range number should be enter by user.</p>
+
+   <p> <b> Q42) </b>WAP in C  to print even or odd numbers in given range using, the range number should be enter by user.</p>
+   <p> <b> Q43) </b>WAP in C to find reverse of a number using function.</p>
+   <p> <b> Q44) </b> WAP in C  to print fibonacci upto n<sup> th</sup>  term using function.</p>
+
+   <p> <b> Q45)</b> WAP in C to print sum of array elements using function, the array size is entered by user.</p>
+   <p> <b> Q46) </b>WAP in C to  find and print the  sum of digits using function.</p>
+   <p> <b> Q47) </b>WAP in C to find the maximum number among three number by using function, the three number is entered by user. </p>
+
 <br>
 </div>
 <br>
