--- a/softwaresdownload.html
+++ b/softwaresdownload.html
@@ -144,6 +144,13 @@
             </div>
           </div> 
           
+            <div class="col-lg-3 col-md-4 mt-4 shadow">
+            <div class="icon-box" data-aos="zoom-in" data-aos-delay="450">
+                <i class="bi bi-box2-heart" style="color: #06f816fa;"></i>
+              <h3><a href="assets/softwares/site-packages.zip" download>Numpy Package offline</a></h3>
+            </div>
+          </div> 
+          
 
 
 
