--- a/contentPage/numpybasic.html
+++ b/contentPage/numpybasic.html
@@ -700,17 +700,32 @@ print(a)</code>
                      <pre>
                      <code class="language-java">
  import numpy as np
- a=np.array([ (10,20,30) , (40,50,60) , (70,80,90) ])
+ a = np.array([[[1, 2, 3], [4, 5, 6]], [[1, 2, 3], [4, 5, 6]]
  print(a)</code>
                      </pre> 
                      <p> <b> Output :- </b></p>
+                     <p> [[[1 2 3]</p>
+                     <p> [4 5 6]]</p>
+                     <p>  [[1 2 3]</p>
+                     <p> [4 5 6]]]</p>
+                     </div>
+                     <br>
+                    <div class="w3-container  w3-pale-yellow w3-round-xlarge">
+                        <p> <b> &#x21db; </b> Zero-Dimensional Numpy Array</p>
+                         <p> <b>Example:</b></p>
+                        
+                     <pre>
+                     <code class="language-java">
+ import numpy as np
+ a = np.array(4)
+ print(a)
+ print(a.ndim)
+</code>
+                     </pre> 
+                     <p> <b> Output :- </b></p>
+                     <p> 4</p>
+                     <p> 0</p>
                     
-
-
-                     <p>  [[10 20 30]</p>
-                     <p>  [40 50 60]</p>
-                     <p>  [70 80 90]]</p>
- 
                      </div>
 
 
