Iot and python Update

--- a/contentPage/buildingIoTapplications.html
+++ b/contentPage/buildingIoTapplications.html
@@ -2117,6 +2117,14 @@ int main()
    <p> <b> Q45)</b> WAP in C to print sum of array elements using function, the array size is entered by user.</p>
    <p> <b> Q46) </b>WAP in C to  find and print the  sum of digits using function.</p>
    <p> <b> Q47) </b>WAP in C to find the maximum number among three number by using function, the three number is entered by user. </p>
+<p> <b> Q48)</b>   WAP to print a character by accept ASCII value from user by using function.</p>
+ <p> <b>Q49) </b>  WAP to print a ASCII value and by accept character from user by using function.</p> 
+
+<p> <b>Q50) </b>  WAP to print A to Z character by using function.</p>
+<p> <b>Q51) </b> WAP to create an Array of character, the is character  by accept from user, and enter a character from user (A) , if A should found in array then print "Found" otherwise not "Not Found".
+</p>
+
+ 
 
 <br>
 </div>
