--- a/contentPage/numpybasic.html
+++ b/contentPage/numpybasic.html
@@ -1554,10 +1554,11 @@ print(x)
 import numpy as np
 a=np.arange(10)
 s=slice(2,7,2)
-print(a)</code>
+print(a[s])
+</code>
                     </pre>
                     <p> <b> Output :-</b></p>
-                    <p> [0 1 2 3 4 5 6 7 8 9]</p>
+                    <p>[2 4 6]</p>
                     </div>
                     <br>
                     <div class="w3-container  w3-pale-yellow w3-round-xlarge">
