--- a/contentPage/AlgorithmsandFlowcharts.html
+++ b/contentPage/AlgorithmsandFlowcharts.html
@@ -315,7 +315,7 @@
                             <p> Q14) Draw a flowchart and algorithm also which take a number from user and print your name upto N number.
                             </p>
 
-                                <img src="content/img/python/loopchart.png" class="w3-round w3-center"  alt="image" style="width:100%">         
+                                <img src="content/img/python/chartQ14.jpg" class="w3-round w3-center"  alt="image" style="width:100%">         
                         
  <br>
  <ul class="w3-ul">
