--- a/olevel.html
+++ b/olevel.html
@@ -148,6 +148,18 @@
             </div>
           </div> 
           <div class="col-lg-3 col-md-4 mt-4 shadow">
+            <div class="icon-box" data-aos="zoom-in" data-aos-delay="600">
+              <i class="bi bi-book" style="color: #cc2929;"></i>
+              <h3><a href="importantnotesM3.html">Most Important Notes for M3</a></h3>
+            </div>
+          </div> 
+          <div class="col-lg-3 col-md-4 mt-4 shadow">
+            <div class="icon-box" data-aos="zoom-in" data-aos-delay="600">
+              <i class="bi bi-book" style="color: #cc2929;"></i>
+              <h3><a href="importantnotesM4.html">Most Important Notes for M4</a></h3>
+            </div>
+          </div> 
+          <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="500">
               <i class="bi bi-book" style="color: #b20969;"></i>
               <h3><a href="shortcutkeys.html">Short Cut Keys</a></h3>
