--- a/importantnotesM3.html
+++ b/importantnotesM3.html
@@ -32,7 +32,7 @@
     <br>
     <br>
     
-    <h2 class="w3-center"> Most Important Practicle based Questions</h2>
+    <h2 class="w3-center"> Most Important Practical based Questions</h2>
     <br>
     <div class="w3-container  w3-pale-yellow w3-round-xlarge">
       <br>
