--- a/importantnotesM3.html
+++ b/importantnotesM3.html
@@ -149,36 +149,90 @@ print("Sum of elements is :",s)
 </div>
 <br>
 
-<!-- 
-<div class="w3-container w3-pale-yellow w3-round-xlarge">
-  <br>
-  <p> <b> Q5)</b> Write a program in 'C' to print total numbers of odd integers and their sum in an array that contains 15 element.
-  </p> 
-  <br>
-      <p> <b>Answer:</b></p>
-     
-  <pre>
-  <code class="language-java">
-# include < stdio.h >
-int main(){
-  int n=15,a[n],s=0,t=0;
-  for(int i=0;i < n;i++){
-  printf("Enter the element of index %d: ",i);
-  scanf("%d",&a[i]);
-  if(a[i]%2!=0){
-      s=s+a[i];
-      t=t+1;
-  }
-  }
-  printf("Sum of all odd integer in array is: %d",s);
-  printf("\nTotal number of odd integer is: %d",t);
-  return 0;
-}
 
-  </code>
-  </pre>
+
+
+  <br>
+
+  <h2 class="w3-center"> Most Important MCQ based Questions</h2>
+
+  <ul class="w3-ul">
+  <li>
+    <p>=> Q) Are NumPy arrays fixed size? </p>
+    <p> A) Yes, NumPy arrays have a fixed size at creation.</p>
+  </li>
+  <li>=> N-dimensional array (ndarray) </li>
+  <li> 
+<p>Q) Which method creates a new array object that looks at the same data? </p>
+<p> A) You can use the view method to create a new array object that looks at the same data as the original array (a shallow copy).
+</p>   
+  </li>
+
+  <li> 
+<p> a={}</p>
+<p>  type(a)</p>
+<p>< class 'dict' ></p>
+</li>
+  
+  
+  <li>
+  <p>a=()</p>
+  <p> type(a)</p>
+  <p>< class 'tuple' ></p>
+  </li>
+
+
+  <li> 
+
+<p>a=[]</p>
+<p>type(a) </p>
+<p> < class 'list' ></p>
+  </li>
+
+  <li> 
+  <p>a=set()</p>
+  <p>type(a)</p>
+  <p>< class 'set' ></p>
+  </li>
+
+  <li>
+    <p>a=list() </p>
+    <p> type(a) </p>
+    <p> < class 'list'> </p> 
+   
+</li>
+
+  <li>  => The raise keyword is used to raise an exception. </li>
+  <li> =>  Note: Exponent operator ** has right-to-left associativity in Python. </li>
+  <li>
+  <p> Q) Is array in Python or not? </p>  
+  <p> A) Python has a set of built-in methods that you can use on lists/arrays. Note: Python does not have built-in support for Arrays, but Python Lists can be used instead.
+  </p>  
+  </li>
+ 
+<li>=> The value of sin 90 degrees is 1. Sin 90 degrees in radians is written as sin (90° × π/180°).
+</li>
+  </ul>
+
+  
+
+  
+  
+  
+  
+
+
+
+
+  <br>
+  
 </div>
+
+
 <br>
+<br>
+
+<!-- 
 <div class="w3-container  w3-sand w3-round-xlarge">
   <br>
   <p> <b> Q6)</b> Write a program in 'C' to print total numbers of odd integers and their sum in an array that contains 15 element.
